# VisComp

./: .gitignore  README.md  Sankey_code.ipynb  WITS-Partner.xlsx  bad_sankey.ipynb  etlike.ipynb  link_do_video  pyproject.toml  steamgpu.csv  traducoes_limpas.json
data/: 0.csv  1.csv  2.csv  3.csv  4.csv  final_table.csv  students.csv
final_project/: claravisualizacoes.ipynb  felipe_visualizacoes.ipynb  notaXfrequencia_scatter.ipynb
seminar/: brasiltrade.csv  country_continent_full.csv  orcamento.csv  traducoes_brutas.json
