[project]
name = "visualizacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "pip>=25.2",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "pyarrow>=22.0.0",
]
